--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,10 @@ dependencies:
   path: ^1.9.0
   intl: ^0.19.0
   jiffy: ^6.3.1
-#  flutter_local_notifications: ^17.1.1
-  flutter_timezone: ^2.0.0
   awesome_notifications: ^0.9.3+1
   palette_generator: ^0.3.3+3
   http: ^1.2.1
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
